# trillium-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  gateway.kdl  release-plz.toml  renovate.json
.cargo/: config.toml
.github/: build-setup.yml
.github/workflows/: ci.yaml  docs.yml  release-plz.yml  release.yml  rust-clippy.yml
docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/guide/: bench.md  client.md  dev-server.md  grpc.md  installing.md  proxy.md  serve.md  welcome.md
docs/guide/gateway/: overview.md  rewrite-html.md  routing.md  virtual-hosts.md
docs/src/components/Install/: index.tsx  styles.module.css
docs/src/prism/: prism-kdl.js
docs/src/theme/: prism-include-languages.ts
docs/static/: CNAME
src/: assets.rs  bench.rs  cache.rs  cli_options.rs  client.rs  client_tls.rs  dev_server.js  dev_server.rs  directory_listing.rs  dns.rs  grpc.rs  lib.rs  proxy.rs  ratelimit.rs  root_path.rs  serve.rs  server_tls.rs  static_cli_options.rs  tls.rs
src/assets/_css/: base.css  listing.css  markdown.css
src/gateway/: build.rs  config.rs  host.rs  mod.rs  sni.rs  upstream.rs
src/serve/: directory_listing.rs  live.js  live.rs  render.rs  root_path.rs
