
[package]
name = "trillium-cli"
version = "0.4.0"
description = "The trillium.rs cli"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
repository = "https://github.com/trillium-rs/trillium-cli"
keywords = ["trillium"]
categories = ["web-programming::http-server", "web-programming"]

[features]
default = ["serve", "client", "bench", "proxy", "rustls", "h3"]
serve = [
        "dep:trillium",
        "dep:trillium-logger",
        "dep:trillium-static",
        "dep:trillium-proxy",
        "dep:trillium-client",
        "dep:trillium-compression",
        "dep:trillium-ratelimit",
        "dep:colored",
        "dep:blocking",
        "dep:percent-encoding",
        "dep:querystrong",
        "dep:size",
        "dep:humantime",
]
dev-server = [
        "dep:ansi-to-html",
        "dep:async-io",
        "dep:async-broadcast",
        "dep:futures-lite",
        "dep:serde",
        "dep:serde_json",
        "dep:trillium",
        "dep:trillium-proxy",
        "dep:trillium-router",
        "dep:trillium-client",
        "dep:trillium-websockets",
        "dep:trillium-html-rewriter",
        "dep:notify",
        "dep:nix",
        "dep:signal-hook",
        "dep:libc",
]
client = [
  "dep:async-fs",
  "dep:blocking",
  "dep:futures-lite",
  "dep:serde_json",
  "dep:trillium-client",
  "dep:colored",
  "dep:colored_json",
  "dep:mime",
  "dep:size",
  "dep:trillium-redirect",
  "dep:trillium-logger",
  "dep:humantime",
  "trillium-logger/client"
]
bench = [
        "client",
        "dep:trillium-http",
        "dep:hdrhistogram",
        "dep:indicatif",
        "dep:humantime",
        "dep:async-channel",
        "dep:async-io",
        "dep:fastrand",
]
proxy = [
  "dep:trillium",
  "dep:trillium-proxy",
  "dep:trillium-logger",
  "dep:trillium-client",
  "dep:trillium-cache",
  "dep:trillium-caching-headers",
  "dep:trillium-compression",
  "dep:trillium-ratelimit",
  "dep:humantime",
  "dep:size",
  "trillium-logger/client",
  "trillium-cache/client"
]
gateway = [
        # Per-host SNI TLS (`gateway/sni.rs`) is built directly on rustls
        # (`ServerConfig`/`CertifiedKey` + aws-lc-rs), so the gateway's TLS
        # support is rustls-only by construction.
        "rustls",
        "dep:trillium",
        "dep:trillium-http",
        "dep:trillium-logger",
        "dep:trillium-static",
        "dep:trillium-proxy",
        "dep:trillium-client",
        "dep:trillium-router",
        "dep:trillium-redirect",
        "dep:trillium-html-rewriter",
        "dep:trillium-compression",
        "dep:trillium-caching-headers",
        "dep:trillium-cache",
        "dep:trillium-ratelimit",
        "dep:knus",
        "dep:miette",
        "dep:signal-hook",
        "dep:colored",
        "dep:blocking",
        "dep:percent-encoding",
        "dep:querystrong",
        "dep:size",
        "dep:humantime",
        "trillium-logger/client",
        "trillium-cache/client",
]
grpc = ["dep:trillium-grpc-codegen"]
openssl = ["dep:trillium-openssl"]
native-tls = ["dep:trillium-native-tls"]
rustls = ["dep:trillium-rustls", "dep:rustls-pemfile"]
# h3/QUIC requires TLS 1.3; trillium-quinn builds on rustls, so h3 implies rustls.
h3 = ["dep:trillium-quinn", "rustls"]

[dependencies]
ansi-to-html = { version = "0.2.3", optional = true }
async-fs = { version = "2.2.0", optional = true }
async-global-executor = "3.1.0"
async-io = { version = "2.6.0", optional = true }
blocking = { version = "1.6.2", optional = true }
env_logger = "0.11.10"
futures-lite = { version = "2.6.1", optional = true }
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }

trillium = { version = "1.2.0", optional = true}
trillium-native-tls = { version = "0.6.2", optional = true }
trillium-rustls = { version = "0.11.2", optional = true }
trillium-proxy = { version = "0.8.0", optional = true }
trillium-router = { version = "0.5.0", optional = true }
trillium-static = { version = "0.6.1", features = [
        "smol",
], optional = true }
trillium-websockets = { version = "0.8.0", features = [
        "json",
], optional = true }
trillium-smol = { version = "0.6.1" }
trillium-client = { version = "0.9.3", features = [
        "sonic-rs",
], optional = true }
trillium-http = { version = "1.3.3", optional = true }
hdrhistogram = { version = "7.5.4", optional = true }
indicatif = { version = "0.18.4", optional = true }
humantime = { version = "2.3.0", optional = true }
async-channel = { version = "2.5.0", optional = true }
fastrand = { version = "2.4.1", optional = true }
trillium-logger = { version = "0.5.2", optional = true }
trillium-html-rewriter = { version = "0.5.0", optional = true }
trillium-quinn = { version = "0.1.3", optional = true, features = ["webpki-roots"] }
trillium-openssl = { version = "0.2", optional = true }
trillium-server-common = "0.7.2"
trillium-grpc-codegen = { version = "0.1", optional = true }
trillium-cache = { version = "0.1", optional = true }
trillium-redirect = { version = "*", optional = true, features = ["client"] }
trillium-caching-headers = { version = "0.4.0", optional = true }
trillium-compression = { version = "0.3.0", optional = true }
trillium-ratelimit = { version = "0.0.0", optional = true }
knus = { version = "3.3.1", optional = true }
miette = { version = "7.6.0", features = ["fancy"], optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
colored = { version = "3.1.1", optional = true }
colored_json = { version = "5.0.0", optional = true }
mime = { version = "0.3.17", optional = true }
size = { version = "0.5.0", optional = true }
percent-encoding = { version = "2.3.2", optional = true }
querystrong = { version = "0.4.0", optional = true }
async-broadcast = { version = "0.7.2", optional = true }

[target.'cfg(unix)'.dependencies]
signal-hook = { version = "0.4.4", optional = true }
libc = { version = "0.2.186", optional = true }
nix = { version = "0.31.3", default-features = false, features = [
        "signal",
        "process",
], optional = true }
notify = { version = "8.2.0", optional = true }

[target.'cfg(windows)'.dependencies]
trillium-openssl = { version = "0.2", features = ["vendored"], optional = true }

[lib]
doc = false

[[bin]]
name = "trillium"
doc = false

[profile.release]
lto = "fat"

# The profile that 'dist' will build with. Matches release (fat LTO): a one-time
# cost paid in release CI that every downloader of the prebuilt binary benefits
# from, and keeps the shipped binary identical to `cargo install`.
[profile.dist]
inherits = "release"
lto = "fat"


# [patch.crates-io]
# trillium-html-rewriter = { path = "../trillium-html-rewriter" }
# trillium = { path = "../trillium/trillium" }
# trillium-native-tls = { path = "../trillium/native-tls" }
# trillium-rustls = { path = "../trillium/rustls" }
# trillium-proxy = { path = "../trillium/proxy" }
# trillium-router = { path = "../trillium/router" }
# trillium-static = { path = "../trillium/static" }
# trillium-websockets = { path = "../trillium/websockets" }
# trillium-smol = { path = "../trillium/smol" }
# trillium-client = { path = "../trillium/client" }
# trillium-http = { path = "../trillium/http" }
# trillium-logger = { path = "../trillium/logger" }
# trillium-html-rewriter = { path = "../trillium-html-rewriter" }
# trillium-quinn = { path = "../trillium/quinn" }
# trillium-cache = { path = "../trillium-cache" }
# trillium-caching-headers = { path = "../trillium/caching-headers" }
# trillium-redirect = { path = "../trillium/redirect" }
# trillium-server-common = { path = "../trillium/server-common" }
